fixed content button,button arrow and content text

--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
             />
           </button>
       </nav>
-      <header>
+      <div class="main__header">
         <h1 class="content__title">
           <div class="content__title--line"></div>
           Услуги и сервисы
@@ -140,7 +140,7 @@
                   class="navigation__button--icon button--seting"/>
           </button>
         </div>
-      </header>
+      </div>
       <ul class="content__list--service">
         <li class="content__item--servic">Ремонтируемые бренды</li>
         <li class="content__item--servic">Дополнительные услуги</li>
@@ -151,17 +151,17 @@
       </ul>
       <div class="content">
         <div class="content__wrapper">
-          <span class="content__text__first">
+          <span class="content__text--first">
             Мы являемся авторизованным сервисным центром по ремонту техники
             Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с
             официальной гарантией производителя.
             <br /><br />
           </span>
-          <span class="contatent__text--second"
+          <span class="content__text--second"
             >Мы успешно работаем с 1992 года и заслужили репутацию надежного
             партнера</span
           >
-          <span class="contatent__text--tridth"
+          <span class="content__text--tridth"
             >, что подтверждает большое количество постоянных клиентов. Мы
             гордимся тем, что к нам обращаются по рекомендациям и, в свою
             очередь, советуют нас родным и близким.</span
