fixed table and table line

--- a/src/index.html
+++ b/src/index.html
@@ -161,7 +161,7 @@
             >Мы успешно работаем с 1992 года и заслужили репутацию надежного
             партнера</span
           >
-          <span class="content__text--tridth"
+          <span class="contatent__text--tridth"
             >, что подтверждает большое количество постоянных клиентов. Мы
             гордимся тем, что к нам обращаются по рекомендациям и, в свою
             очередь, советуют нас родным и близким.</span
@@ -767,6 +767,7 @@
             </button>
           </td>
         </tr>
+        
         <tr>
           <td>Замена дисплея</td>
           <td>1000 ₽</td>
