--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
       </ul>
       <div class="content">
         <div class="content__wrapper">
-          <span class="content__text__first">
+          <span class="content__text--first">
             Мы являемся авторизованным сервисным центром по ремонту техники
             Dell. Только у нас вы можете отремонтировать свой ноутбук Dell с
             официальной гарантией производителя.
             <br><br>
           </span>
-          <span class="contatent__text--second">Мы успешно работаем с 1992 года и заслужили репутацию надежного
+          <span class="content__text--second">Мы успешно работаем с 1992 года и заслужили репутацию надежного
             партнера</span>
-          <span class="contatent__text--tridth">, что подтверждает большое количество постоянных клиентов. Мы
+          <span class="content__text--tridth">, что подтверждает большое количество постоянных клиентов. Мы
             гордимся тем, что к нам обращаются по рекомендациям и, в свою
             очередь, советуют нас родным и близким.</span>
 
@@ -529,6 +529,7 @@
             </button>
           </td>
         </tr>
+        
         <tr>
           <td>Замена дисплея</td>
           <td>1000 ₽</td>
@@ -582,7 +583,9 @@
         услугу. Для получения коммерческого предложения на постоянное
         обслуживание, оставьте заявку.
       </p>
-      <button class="down-container__button">Получить комерческое придложение</button>
+      <button class="down-container__button">Получить комерческое придложение
+        <span class="devices__button--arrow">></span>
+      </button>
     </div>
 
     <footer class="main__footer">
