--- a/src/index.html
+++ b/src/index.html
@@ -822,8 +822,9 @@
         обслуживание, оставьте заявку.
       </p>
       <button class="down-container__button"
-        >Получить комерческое придложение</button
-      >
+        >Получить комерческое придложение
+        <span class="devices__button--arrow">></span>
+      </button>
     </div>
 
     <footer class="main__footer">
