fixed script & menu footer & main footer & padding for ul,main title,navigation

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <button class="headar__button--close">
             <img src="img/moda-img/close.svg" alt="Close" />
           </button>
-          <img src="img/moda-img/Group.svg" alt="Logo" class="logo" />
+          <img src="img/moda-img/Group.svg" alt="Logo" class="modal__logo" />
           <button class="headar__button--search">
             <img src="img/moda-img/search.svg" alt="Search" />
           </button>
@@ -128,17 +128,18 @@
         </h1>
         <div class="button__section--add">
           <button class="navigation__button--icon">
-            <span class="button__text--add">Статус ремонта</span>
-                <img src="./img/search.svg"
-                  alt="search"
-                  class="navigation__button--icon button--search"/>
-          </button>
-          <button class="navigation__button--icon">
             <span class="button__text--add">Оставить заявку</span>
             <img src="./img/seting.svg"
                   alt="seting"
                   class="navigation__button--icon button--seting"/>
           </button>
+          <button class="navigation__button--icon">
+            <span class="button__text--add">Статус ремонта</span>
+                <img src="./img/search.svg"
+                  alt="search"
+                  class="navigation__button--icon button--search"/>
+          </button>
+          
         </div>
       </div>
       <ul class="content__list--service">
@@ -380,8 +381,8 @@
             </div>
           </div>
         </div>
-        <span class="swiper__pagination--second"></span>
       </div>
+      <span class="swiper__pagination--second"></span>
 
       <span class="swiper-title">Цена на услуги</span>
       <div class="swiper swiper-third">
@@ -821,9 +822,9 @@
         услугу. Для получения коммерческого предложения на постоянное
         обслуживание, оставьте заявку.
       </p>
-      <button class="down-container__button"
-        >Получить комерческое придложение
-        <span class="devices__button--arrow">></span>
+      <button class="down-container__button">
+        <span>Получить комерческое придложение</span>
+        <span class=".down-container__button--arrow">></span>
       </button>
     </div>
 
