--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <button class="headar__button--close">
             <img src="img/moda-img/close.svg" alt="Close">
           </button>
-          <img src="img/moda-img/Group.svg" alt="Logo" class="logo">
+          <img src="img/moda-img/Group.svg" alt="Logo" class="modal__logo">
           <button class="headar__button--search">
             <img src="img/moda-img/search.svg" alt="Search">
           </button>
@@ -98,13 +98,14 @@
         </h1>
         <div class="button__section--add">
           <button class="navigation__button--icon">
-            <span class="button__text--add">Статус ремонта</span>
-                <img src="./img/search.svg" alt="search" class="navigation__button--icon button--search">
-          </button>
-          <button class="navigation__button--icon">
             <span class="button__text--add">Оставить заявку</span>
             <img src="./img/seting.svg" alt="seting" class="navigation__button--icon button--seting">
           </button>
+          <button class="navigation__button--icon">
+            <span class="button__text--add">Статус ремонта</span>
+                <img src="./img/search.svg" alt="search" class="navigation__button--icon button--search">
+          </button>
+          
         </div>
       </div>
       <ul class="content__list--service">
@@ -282,8 +283,8 @@
             </div>
           </div>
         </div>
-        <span class="swiper__pagination--second"></span>
       </div>
+      <span class="swiper__pagination--second"></span>
 
       <span class="swiper-title">Цена на услуги</span>
       <div class="swiper swiper-third">
@@ -583,8 +584,9 @@
         услугу. Для получения коммерческого предложения на постоянное
         обслуживание, оставьте заявку.
       </p>
-      <button class="down-container__button">Получить комерческое придложение
-        <span class="devices__button--arrow">></span>
+      <button class="down-container__button">
+        <span>Получить комерческое придложение</span>
+        <span class=".down-container__button--arrow">></span>
       </button>
     </div>
 
